{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "7ccb4844-9e14-4eb9-b778-a0ce2f73c9e1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f4547f6a-c157-414d-8592-cd3065cd863b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "528b1a25-eec3-4a84-ad3b-1502c42483ba",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "338fa136-14f7-4ce1-8887-494ed598f2a5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0ab8c1cc-f687-4d1a-8fcb-e952571e731d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Normal",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "963134f7-dd4e-49f5-9f51-ee233f48a61c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Normal",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fe1d957e-10a7-4768-b8d6-aabaada1b6f2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Normal",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "01f58366-5ceb-4903-bcb2-46786c54970a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Normal",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "daa60ca4-7940-4b69-b8dc-c9ff308c4a1c",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "Value",
                    "id": "a8fe0240-80ff-4b43-a3dd-2165a99ade67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd8895fd-87ca-44e4-8a37-894c39fe45ed",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Normal",
            "bindingGroup": "Normal",
            "devices": []
        }
    ]
}